--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,13 @@
     bottom: 45px;
     z-index: 99;
 }
+.cookie-banner {
+    position: fixed;
+    /*display: none;
+    right: 45px;
+    bottom: 45px;*/
+    z-index: 99;
+}
 
 #name{
     color: var(--primary);
